force-app/main/default/objects/Soccer_fields__c/Soccer_fields__c.object-meta.xml
<CustomObject>
    <description>Canchas de futbol para alquilar</description>
    <label>SoccerFields</label>
    <nameField>
        <label>soccer fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SoccersFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>