force-app/main/default/objects/Soccer_fields__c/fields/Pay_Before__c.field-meta.xml
<CustomField>
    <fullName>Pay_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Before</label>
    <type>Checkbox</type>
</CustomField>